--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,9 +31,12 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "enhanced-resolve": "^4.1.0",
+    "express": "^4.16.4",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular/language-service": "~7.0.0",
